--- a/src/styles/sections/_all-sections.scss
+++ b/src/styles/sections/_all-sections.scss
@@ -2522,6 +2522,7 @@
     .content h2 a {
       writing-mode: horizontal-tb; /* Change writing mode to horizontal */
       transform: none; /* Remove rotation */
+      text-align: center;
     }
   }
 }
