--- a/src/styles/sections/_all-sections.scss
+++ b/src/styles/sections/_all-sections.scss
@@ -2579,7 +2579,8 @@
   }
 
   .project-d-o__single {
-    padding: 30px;
+    // padding: 30px;
+    padding: 20px;
     border: 1px solid #414141;
     display: flex;
     align-items: center;
