--- a/src/styles/sections/_all-sections.scss
+++ b/src/styles/sections/_all-sections.scss
@@ -2560,7 +2560,7 @@
     img {
       // width: 100%;
       min-height: 300px;
-      max-width: 1000px;
+      width: 1000px;
       display: block;
       margin: 0 auto;
     }
